# aipro

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  dead_code_analysis_report.md  debug_image_flow.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_upgrade.txt  test_persona.py  unused_functions_analysis.md  vulture_report_high.txt
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 20251207_1933_8ff1f9138cea_add_active_persona_to_users.py
app/: __init__.py  config.py  main.py  websocket_sender.py
app/ai/: __init__.py
app/api/: admin_routes.py  auth_routes.py  public_routes.py  system_routes.py  user_routes.py
app/auth/: __init__.py  dependencies.py  invite_manager.py  permissions.py  remember.py  session.py  user_manager.py
app/chat/: __init__.py  answerer.py  (+7 more)
docker/: .dockerignore  Dockerfile  docker-compose.yml
docs/: ARCHITECTURE.md  BACKEND_ANALYSIS_REPORT.md  DETAYLI_HATA_ANALIZI_VE_COZUMLER.md  DETAYLI_HATA_ANALIZI_VE_COZUMLER_DEVAM.md  FRONTEND_ANALYSIS_REPORT.md  IMAGE_QUEUE_SYSTEM.md  IMPROVEMENTS_FOR_10_10.md  MESSAGE_RENDERING.md  PROJECT_DOCUMENTATION.md  QUALITY_MASTER_PLAN.md  README.md  ROADMAP.md  UYGULAMA_RAPORU_FINAL.md  orchestrator_router_blueprint.md
plans/: theme_compatibility_report.md  ui_migration_analysis.md
scripts/: __init__.py  cleanup_memories.py  create_placeholder_images.py  deploy_critical_fixes.py  deploy_critical_fixes.sh  launcher.pyw  list_memories.py  mobile_server.bat  redis.bat  setup_alembic_migration.py  start.bat
tests/: __init__.py  conftest.py  test_critical_fixes.py  test_fixes_8_9.py  test_image_router.py  test_next_three_fixes.py  test_orchestrator_adapter.py  test_orchestrator_sidecar.py  test_persona_system.py  test_professional_output.py  test_response_enhancement.py  test_smart_router.py  test_smart_router_script_wrapper.py  test_streaming_buffer.py
ui/: admin.html  chat.html  login.html  manifest.json  register.html  sw.js
ui-new/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
(+174 files in other folders)
